<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>Squiq</groupId>
    <artifactId>WarOfSquirrels</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
<<<<<<< HEAD
<!--            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>
                            package
                        </phase>

                    </execution>
                </executions>
            </plugin> -->
=======
>>>>>>> 667e63346b81486f24d90c6f7f6af8fb74c2dce4
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>sponge-maven-repo</id>
            <name>Sponge maven repo</name>
            <url>http://repo.spongepowered.org/maven</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <!--<repository>
            <id>pex-repo</id>
            <url>http://pex-repo.aoeu.xyz</url>
        </repository>-->
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spongepowered</groupId>
            <artifactId>spongeapi</artifactId>
<<<<<<< HEAD
            <version>5.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
=======
            <version>3.1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>2.4.1</version>
        </dependency>
>>>>>>> 667e63346b81486f24d90c6f7f6af8fb74c2dce4
        <!--Mysql Jdbc -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.6</version>
        </dependency>
<<<<<<< HEAD
        <!-- HikariCP -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>2.4.5</version>
        </dependency>
=======
        <!--PermissionEx 3.0
        <dependency>
            <groupId>ru.tehkode</groupId>
            <artifactId>PermissionsEx</artifactId>
            <version>1.22</version>
        </dependency> -->
>>>>>>> 667e63346b81486f24d90c6f7f6af8fb74c2dce4
    </dependencies>

</project>